# acherus

./: .gitignore  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  NOTICE  README.md  SECURITY.md  config.toml  pyproject.toml  readthedocs.yml  release.md  release.sh  requirements.txt  setup.py
.github/: pull_request_template.md
.github/agent/: release_notes_agent.md
.github/workflows/: manual_LOC.yml  manual_LOD.yml  nightly_codecov_CPU.yml  nightly_tests_CPU_p3.11.yml  nightly_tests_CPU_p3.12.yml  nightly_tests_CPU_p3.13.yml  nightly_tests_CPU_p3.14.yml  publish.yml
acherus/: __init__.py  __main__.py  _version.py  config.py  constants.py  main.py  monitoring.py  plotting.py
acherus/config/: options.py
acherus/data/: __init__.py  diagnostics.py  paths.py  routines.py  store.py
acherus/functions/: __init__.py  density.py  dispersion_models.py  fft_backend.py  fft_manager.py  fluence.py  fourier.py  intensity.py  interp_pi.py  interp_w.py  ionization.py  keldysh_rates.py  keldysh_sum.py  nonlinear.py  radius.py  raman.py  sellmeier.py
acherus/mathematics/: __init__.py
acherus/mathematics/routines/: __init__.py  density.py  nonlinear.py  raman.py
acherus/mathematics/shared/: __init__.py  fourier.py  ionization.py
acherus/mesh/: __init__.py  grid.py
acherus/physics/: __init__.py  dispersion.py  equation.py  equations.py  keldysh.py  laser.py  materials.py  media.py  medium.py  optics.py  photoioniz.py  photoionization.py  ppt_rate.py  pump.py  sellmeier.py
acherus/solvers/: FCN.py  SSCN.py  __init__.py  base.py  fcn.py  fss.py  nrFCN.py  nrSSCN.py  rFCN.py  rSSCN.py  shared.py  sscn.py
codes/latex/phd_reviews/: filamentacion_1.tex
codes/python/acherus/: README.md  __init__.py  _version.py  main.py  monitoring.py  plotting.py  plotting_inter.py  plotting_temp.py  setup.py
codes/python/aiurpy/: README.md  __init__.py  __main__.py  _version.py  main.py  plotting.py  plotting_temp.py  setup.py
codes/python/atfurpy/: .pylintrc  README.md  __init__.py  __main__.py  _version.py  dependencies.txt  main.py  plotting.py  setup.py
codes/python/hala/: README.md  __init__.py  __main__.py  _version.py  dependencies.txt  inspect.py  main.py  plotting.py  plotting_temp.py  setup.py
codes/python/old/: ff_2d_f.py  ffd_2d1_fcn_old.py  ffdmk_2d1_adi_mono.py  solver_2d1_fcn_mono.py  solver_2d1_fss_mono.py
docs/: api.md  conf.py  index.md  installation.md  license.md  physics.md  release.md  releases.md  requirements.txt  userguide.md
docs/_static/: custom.css
docs/source/: acherus.rst  conf.py  index.md  installation.md  physics.md  releases.md  userguide.md
docs/user_guide/: index.md  methods.md  physics.md  walkthrough.md
examples/: 001_air_IR_ps.toml  002_air_IR_fs.toml  003_water_IR_fs.toml  004_water_UV_fs.toml
old/: 2d_fcn_ab2_old.py  air_2d1_fcn_rk4_old.py  d_1d1_cn_old.py  ff_3d_f.py  ffd_2d1_adi_old.py  ffd_analy_sol_old.py  ffdmk_2d1_fcn_old.py  plotting_old.py  water_2d1_fcn_ab2_old.py
phd_coding/python/: mpl_local.py  mpl_plot.py  mpl_plot_2.py  mpl_plot_new.py  mpl_remote.py  plotter.py  pruebillas.py
phd_coding/python/Hastur_module/: Hastur.py  beam_config.py  simulation.py
phd_coding/python/cartesian/: ff_2d_f.py  ff_3d_f.py
phd_coding/python/cylindrical/: 2d_fcn.py  2d_fcn_ab2.py  2d_fcn_rk4.py  air_2d1_fcn.py  air_2d1_fcn_ab2.py  air_2d1_fcn_rk4.py  air_2d1_scn.py  air_2d1_scn_ab2.py  ff_2d_cn.py  ffd_2d1_adi.py  mpl_plot.py  (+24 more)
tests/: .coveragerc  test_000_imports.py  test_001_constants.py  test_002_calls.py
(+158 files in other folders)
