[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "acherus"
dynamic = ["version"]
description = "3D spatiotemporal solver, focused in atmospheric laser-plasma filaments"
license = "Apache-2.0"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.11"

authors = [
    { name = "Ismael Torres García", email = "i.torresg@upm.es"},
    { name = "Eduardo Oliva Gonzalo", email = "eduardo.oliva@upm.es"}
]

keywords = [
    "simulation",
    "laser",
    "filamentation",
    "atmospheric",
    "plasma",
    "oxygen",
    "nitrogen",
    "femtosecond",
    "picosecond",
]

classifiers=[
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "h5py",
    "numba",
    "pyFFTW",
]

[project.urls]
Issues = "https://github.com/ismatorresgarcia/acherus/issues"
Documents = "https://acherus.readthedocs.io/en/latest/index.html"
Source = "https://github.com/ismatorresgarcia/acherus"
Homepage = "https://acherus.readthedocs.io/"
Downloads = "https://pypi.org/project/acherus/"

[project.scripts]
acherus = "acherus.__main__:main"
acherus-monitoring = "acherus.monitoring:main"
acherus-plotting = "acherus.plotting:main"

[tool.setuptools.dynamic]
version = { attr = "acherus._version.__version__" }

[tool.setuptools.packages.find]
where = ["."]
